--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="image">
-            <img src="image/photo.png" class="girl">
+            <img src="image/pic.jpeg" class="girl">
         </div>
 
         <div class="icons">
